# travel-planning

./: .gitignore  README.md  URL.TXT  app.py  requirements.txt
api/: .dockerignore  .env.example  .gcloudignore  AGENTS.md  Dockerfile  README.md  deploy.sh  pyproject.toml
api/api/: auth.py  config.py  db.py  fx.py  geocode.py  main.py  models.py  pdf.py  slug.py  sse.py
api/api/llm/: augment.py  budget.py  client.py  hotels.py  parse_brief.py  pdf_costs.py  pdf_plan.py  profile.py  quick_extract.py  refine.py  research.py  suggestions.py
api/api/routes/: budget.py  hotels.py  pdf.py  profile.py  public.py  refine.py  share.py  trips.py
api/atlas_api.egg-info/: SOURCES.txt  requires.txt
api/tests/: conftest.py  test_auth.py  test_fx.py  test_geocode.py  test_health.py  test_hotels.py  test_llm_budget.py  test_llm_pdf_costs.py  test_llm_pdf_plan.py  test_llm_profile.py  test_migrations.py  test_models.py  test_parse_brief.py  test_pdf.py  test_quick_extract.py  test_refine.py  test_research.py  test_routes_budget.py  test_routes_hotels.py  test_routes_pdf.py  test_routes_profile.py  test_routes_public.py  test_routes_refine.py  test_routes_share.py  test_routes_trip_document.py  test_routes_trips.py  test_slug.py  test_sse.py  test_suggestions.py
scripts/: gen-icons.mjs
supabase/migrations/: 2026-05-01_initial_schema.sql  2026-05-03_trip_budgets.sql  2026-05-03_trip_centroid.sql  2026-05-03_trip_is_saved.sql  2026-05-03_trip_share_token.sql  (+3 more)
web/: .env.local.example  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
(+119 files in other folders)
