[project]
name = "atlas-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.0",
  "openai==1.54.4",
  "httpx==0.27.2",
  "python-jose[cryptography]==3.3.0",
  "postgrest==0.18.0",
  "supabase==2.10.0",
  "fpdf2==2.8.1",
  "python-slugify==8.0.4",
  "json-repair==0.30.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
